// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot when not toggled 1`] = `
<DocumentFragment>
  <section
    class="container"
    data-test="more-options"
  >
    <header
      class="header"
      data-test="more-options-header"
    >
      <div
        class="chevronHidden"
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.293 6.293a1 1 0 011.32-.083l.094.083 5 5a1 1 0 01.083 1.32l-.083.094-5 5a1 1 0 01-1.497-1.32l.083-.094L13.585 12 9.293 7.707a1 1 0 01-.083-1.32z"
            fill="currentColor"
          />
        </svg>
      </div>
      <h2
        class="label"
      >
        Advanced options
      </h2>
    </header>
    <div
      class="children hidden"
      data-test="more-options-children"
    />
  </section>
</DocumentFragment>
`;

exports[`matches snapshot when toggled 1`] = `
<DocumentFragment>
  <section
    class="container"
    data-test="more-options"
  >
    <header
      class="header"
      data-test="more-options-header"
    >
      <div
        class="chevronVisible"
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.293 6.293a1 1 0 011.32-.083l.094.083 5 5a1 1 0 01.083 1.32l-.083.094-5 5a1 1 0 01-1.497-1.32l.083-.094L13.585 12 9.293 7.707a1 1 0 01-.083-1.32z"
            fill="currentColor"
          />
        </svg>
      </div>
      <h2
        class="label"
      >
        Advanced options
      </h2>
    </header>
    <div
      class="jsx-1555285825 jsx-876534464 "
      data-test="dhis2-uicore-divider"
    />
    <div
      class="children"
      data-test="more-options-children"
    >
      <p>
        Child paragraph
      </p>
    </div>
  </section>
</DocumentFragment>
`;

exports[`matches snapshot when toggled and different label 1`] = `
<DocumentFragment>
  <section
    class="container"
    data-test="more-options"
  >
    <header
      class="header"
      data-test="more-options-header"
    >
      <div
        class="chevronVisible"
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.293 6.293a1 1 0 011.32-.083l.094.083 5 5a1 1 0 01.083 1.32l-.083.094-5 5a1 1 0 01-1.497-1.32l.083-.094L13.585 12 9.293 7.707a1 1 0 01-.083-1.32z"
            fill="currentColor"
          />
        </svg>
      </div>
      <h2
        class="label"
      >
        Details
      </h2>
    </header>
    <div
      class="jsx-1555285825 jsx-876534464 "
      data-test="dhis2-uicore-divider"
    />
    <div
      class="children"
      data-test="more-options-children"
    >
      <p>
        Child paragraph
      </p>
    </div>
  </section>
</DocumentFragment>
`;
